POC permissions, Unit testing

--- a/TestVaultMeli/TestVaultMeli/Info.plist
+++ b/TestVaultMeli/TestVaultMeli/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
+		<key>NSContactsUsageDescription	</key>
+		<true/>
+		<key>NSLocationAlwaysUsageDescription</key>
+		<true/>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
 		<key>UISceneConfigurations</key>
